--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -29,7 +29,7 @@
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
                             <a class="dropdown-item" routerLink="createserviceEngineer" routerLinkActive="active"  [routerLinkActiveOptions]="{ exact: true }" (click)="serviceEngg()">Create Service Engineer</a>
                             <a class="dropdown-item" routerLink="updateserviceEngineer">Update Service Engineer</a>
-                            <a class="dropdown-item" routerLink="serviceEnggDetails">Service Engineer Details</a>
+                            <a class="dropdown-item" routerLink="serviceEngglist">Service Engineer Details</a>
                         </div>
                     </li>
 
