--- a/MyApp/src/app/component/SERVICE-ENGG/service-engg-list/service-engg-list.component.html
+++ b/MyApp/src/app/component/SERVICE-ENGG/service-engg-list/service-engg-list.component.html
@@ -1,13 +1,13 @@
 <div class="container">
-    <h3>List All Customer</h3>
+    <h3>Service Engineer List</h3>
     <div class="input-group">
-      <input type="text" class="form-control" placeholder="Start searching for a customer Name or Mobilenumber or Email" name="search" 
-      [(ngModel)]="u_email" autocomplete="off">
-      <div class="input-group-append">
-          <button type="submit" class="btn btn-primary">Search</button>
-      </div>
-  </div>
-    
+        <input type="text" class="form-control" placeholder="Start searching for a customer Name or Mobilenumber or Email" name="search" 
+        [(ngModel)]="u_email" autocomplete="off">
+        <div class="input-group-append">
+            <button type="submit" class="btn btn-primary">Search</button>
+        </div>
+    </div>
+
     <table class="table">
       <thead>
         <tr>
@@ -16,20 +16,20 @@
           <th scope="col">Mobile</th>
           <th scope="col">Email</th>
           <th scope="col">Address</th>
-          <th scope="col">Machine Purchased</th>
-          <th scope="col">DateOfPurchased</th>
+          <th scope="col">EnggType</th>
+          <th scope="col">JoiningDate</th>
           <th scope="col">Password</th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let item of customersData ">
+        <tr *ngFor="let item of serviceEnggData ">
           <td>{{item.u_id}}</td>
           <td>{{item.u_name}}</td>
           <td>{{item.u_mobile}}</td>
           <td>{{item.u_email}}</td>
           <td>{{item.u_address}}</td>
           <td>{{item.u_MachinePurchased}}</td>
-          <td>{{item.u_dateOf_Purchased |date:'dd/MM/yyyy'}}</td>
+          <td>{{item.u_joinDate |date:'dd/MM/yyyy'}}</td>
           <td>{{item.u_password}}</td>
           <td style="display: flex">
               <button type="button" class="btn btn-warning btn-sm" [routerLink]="['edit',item.u_id]">Edit</button>
@@ -42,3 +42,4 @@
   </div>
 
   <router-outlet></router-outlet>
+
