--- a/MyApp/src/app/component/CUSTOMERS/customer-edit/customer-edit.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/customer-edit/customer-edit.component.html
@@ -203,7 +203,7 @@
                                     data-target="#customerModal " [disabled]="!formGroup.valid">
                                     Update
                                 </button>
-                                <button class="btn btn-warning" id="Canclebutton" routerLink="/home1/customerdetail">
+                                <button class="btn btn-warning" id="Canclebutton" routerLink="/home1/updateCustomer1">
                                     Cancle
                                 </button>
                             </div>
