--- a/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
@@ -22,7 +22,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let item of customersData ">
+        <tr *ngFor="let item of customersData |searchPipe:u_email;let i=index ">
           <td>{{item.u_id}}</td>
           <td>{{item.u_name}}</td>
           <td>{{item.u_mobile}}</td>
