--- a/MyApp/src/app/app.component.html
+++ b/MyApp/src/app/app.component.html
@@ -1,14 +1,10 @@
 
-<!-- 
+ 
 <router-outlet></router-outlet>
-<<<<<<< HEAD
-<app-status-check
-=======
 
 <!-- <app-status-check
->>>>>>> somnath
 [onlineStatusMessage]="connectionStatusMessage"
 [onlineStatus]="connectionStatus">
 </app-status-check> 
-<app-chart></app-chart>
---><app-assign-complaint></app-assign-complaint>
+<app-chart></app-chart><app-assign-complaint></app-assign-complaint>
+-->
