--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -39,7 +39,7 @@
                             Complaints</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
                             <a class="dropdown-item">View Complaints</a>
-                            <a class="dropdown-item">Assign Complaints</a>
+                            <a class="dropdown-item" routerLink="app-assign-complaint" routerLinkActive="active"  [routerLinkActiveOptions]="{ exact: true }" (click)="AssignComplaint()">Assign Complaints</a>
                         </div>
                     </li>
 
