--- a/MyApp/src/app/component/assign-complaint/assign-complaint.component.html
+++ b/MyApp/src/app/component/assign-complaint/assign-complaint.component.html
@@ -7,7 +7,7 @@
         </div>
        <div class='card-body' >
          <div class='row'>
-           <div class='col-md-1'><b>Filter By</b> </div>
+           <div class='col-md-1' style="margin-left: 20px;margin-top: 5px; font-size: medium;"><b>Filter By</b> </div>
            <div class='col-md-8'>
              <input style="margin-bottom: 17px;" class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off"/>
            </div>
@@ -55,8 +55,15 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <h2 style="color: #337ab7;">Assign Engineer</h2>
-                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                       <button type="button" class="close" data-dismiss="modal">&times;</button>
+                     </div>
+                    <div class='row' style="margin-top: 15px;">
+                        <div class='col-md-3' style="margin-left: 20px;margin-top: 5px; font-size: medium;"><b>Search Engineer</b> </div>
+                        <div class='col-md-8'>
+                          <input style="margin-bottom: 17px;" class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off"/>
+                        </div>
                       </div>
+
                     <div class="modal-body" *ngFor="let item of serviceEnggData">
                         <div class="alert alert-success fade show" >
                         
