--- a/MyApp/src/app/component/CUSTOMERS/customer-edit/customer-edit.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/customer-edit/customer-edit.component.html
@@ -14,7 +14,7 @@
                         <!-- <div *ngIf="data"> -->
                             <div class="form-group">
                                 <label for="u_name">Name<p class="p12">*</p></label>
-                                <input type="text" class="form-control"  id="u_name" [(ngModel)]="data.u_name"formControlName="name"
+                                <input type="text" class="form-control"  [(ngModel)]="data.u_name"formControlName="name"
                                     placeholder="Enter Your Name"
                                     [ngClass]="{ 'is-invalid': submitted && f.name.errors?.invalid }">
                             </div>
@@ -29,7 +29,7 @@
 
                             <div class="form-group">
                                 <label for="u_mobile">Mobile Number<p class="p12">*</p></label>
-                                <input type="text" class="form-control" formControlName="Mobilenumber" id="u_mobile" [(ngModel)]="data.u_mobile"
+                                <input type="text" class="form-control" formControlName="Mobilenumber"  [(ngModel)]="data.u_mobile"
                                     placeholder="Enter Your Mobile Number"
                                     [ngClass]="{ 'is-invalid': submitted && f.Mobilenumber.errors?.invalid }">
                             </div>
@@ -44,7 +44,7 @@
 
                             <div class="form-group">
                                 <label for="u_altermobile">Alternate Mobile Number</label>
-                                <input type="text" class="form-control" formControlName="Alternatemobile"  id="u_altermobile" [(ngModel)]="data.u_altermobile"
+                                <input type="text" class="form-control" formControlName="Alternatemobile"  [(ngModel)]="data.u_altermobile"
                                     placeholder="Enter Your Alternate Mobile Number"
                                     [ngClass]="{ 'is-invalid': submitted && f.Alternatemobile.errors?.invalid }">
                             </div>
@@ -59,7 +59,7 @@
 
                             <div class="form-group">
                                 <label for="u_email">Email<p class="p12">*</p></label>
-                                <input type="email" class="form-control" formControlName="email" id="u_email" [(ngModel)]="data.u_email"
+                                <input type="email" class="form-control" formControlName="email"  [(ngModel)]="data.u_email"
                                     placeholder="Enter Your Email">
                             </div>
                             <!-- <div class="validation-errors">
@@ -74,7 +74,7 @@
 
                             <div class="form-group">
                                 <label for="u_address">Address<p class="p12">*</p></label>
-                                <textarea class="form-control" formControlName="Address"  id="u_address" [(ngModel)]="data.u_address"
+                                <textarea class="form-control" formControlName="Address"   [(ngModel)]="data.u_address"
                                     placeholder="Enter Your Address"
                                     [ngClass]="{ 'is-invalid': submitted && f.Address.errors?.invalid }"></textarea>
                             </div>
@@ -89,7 +89,7 @@
 
                             <div class="form-group">
                                 <label for="u_MachinePurchased">Machine Purchased<p class="p12">*</p></label>
-                                <select class="form-control" formControlName="Machine_purchase" id="u_MachinePurchased" [(ngModel)]="data.u_MachinePurchased"
+                                <select class="form-control" formControlName="Machine_purchase"  [(ngModel)]="data.u_MachinePurchased"
                                     placeholder="Choose Your Machine">
                                     <option value="">Choose your Machine</option>
                                     <option *ngFor="let machine of Machinelist;let i=index" value="{{machine.name}}"
@@ -108,7 +108,7 @@
 
                             <div class="form-group">
                                 <label for="u_dateOf_Purchased">Date Of Purchased<p class="p12">*</p></label>
-                                <input type="text" class="form-control" formControlName="Datepurchased" id="u_dateOf_Purchased" [(ngModel)]="data.u_dateOf_Purchased"
+                                <input type="text" class="form-control" formControlName="Datepurchased"  [(ngModel)]="data.u_dateOf_Purchased"
                                     placeholder="MM/DD/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }"
                                     [maxDate]="maxDate"
                                     [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors?.invalid }">
@@ -126,7 +126,7 @@
                             <div class="form-group">
                                 <label for="u_password">Password<p class="p12">*</p></label>
                                 <div class="input-group">
-                                    <input [type]="passwordfieldTextType ? 'text':'password'" class="form-control" id="u_password" [(ngModel)]="data.u_password"
+                                    <input [type]="passwordfieldTextType ? 'text':'password'" class="form-control"  [(ngModel)]="data.u_password"
                                         formControlName="password" placeholder="Enter Your password"
                                         [ngClass]="{ 'is-invalid': submitted && f.password.errors?.invalid }">
                                     <div class="input-group-prepend">
@@ -152,7 +152,7 @@
                             <div class="form-group has-success has-feedback">
                                 <label  for="u_cpassword">Confirm Password<p class="p12">*</p></label>
                                 <div class="input-group">
-                                    <input [type]="confirmfieldTextType ? 'text':'password'" class="form-control" id="u_cpassword" [(ngModel)]="data.u_cpassword"
+                                    <input [type]="confirmfieldTextType ? 'text':'password'" class="form-control"  [(ngModel)]="data.u_cpassword"
                                         formControlName="confirmPassword" placeholder="ConfirmPassword"
                                         [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors ?.invalid }">
                                     <div class="input-group-prepend">
