--- a/MyApp/src/app/component/assign-complaint/assign-complaint.component.html
+++ b/MyApp/src/app/component/assign-complaint/assign-complaint.component.html
@@ -49,7 +49,8 @@
                <div  id="customerModal" class="modal fade" role="dialog">
                 
                 <div >                
-                <div class="modal-dialog" >
+
+                  <div class="modal-dialog" >
               
                   <!-- Modal content-->
                   <div class="modal-content">
@@ -60,24 +61,24 @@
                     <div class='row' style="margin-top: 15px;">
                         <div class='col-md-3' style="margin-left: 20px;margin-top: 5px; font-size: medium;"><b>Search Engineer</b> </div>
                         <div class='col-md-8'>
-                          <input style="margin-bottom: 17px;" class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off"/>
+                          <input style="margin-bottom: 17px;" class="form-control" type="text" name="search" [(ngModel)]="searchText1" autocomplete="off"/>
                         </div>
                       </div>
 
-                    <div class="modal-body" *ngFor="let item of serviceEnggData">
+                    <div class="modal-body" *ngFor="let item of serviceEnggData  | filter:searchText1">
                         <div class="alert alert-success fade show" >
-                        
+                         
                         <div class="row" style="margin-top:8px">
+                          
                           <div class="col-md-2"> 
                           
                           <label style="margin-top:12px" ><b>Id:</b></label>
                           </div>
                           <div class="col-md-10">
-                            <input type="text" name="engg_id" class="form-control"  id="engg_id" [(ngModel)]="item.u_id">
+                            <input type="text" name="engg_id" class="form-control" id="engg_id" [(ngModel)]="item.u_id">
                       
-                          </div>
                            </div>
-
+                          </div>
                            <div class="row" style="margin-top: 15px;">
                             <div class="col-md-2"> 
                             
@@ -114,6 +115,7 @@
                   </div>                        
                 </div>
               </div>
+            
                      <button class='btn btn-primary' data-toggle="modal" data-target="#customerModal ">Assign</button>
                  </td>
 
