--- a/MyApp/src/app/app.component.html
+++ b/MyApp/src/app/app.component.html
@@ -1,10 +1,11 @@
-
- 
+<app-cust-home></app-cust-home>
+  <!--
 <router-outlet></router-outlet>
-
+ -->
 <!-- <app-status-check
 [onlineStatusMessage]="connectionStatusMessage"
 [onlineStatus]="connectionStatus">
 </app-status-check> 
 <app-chart></app-chart><app-assign-complaint></app-assign-complaint>
--->
+
+<app-cust-raise-complaint></app-cust-raise-complaint>-->
