--- a/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
@@ -29,7 +29,7 @@
           <td>{{item.u_email}}</td>
           <td>{{item.u_address}}</td>
           <td>{{item.u_MachinePurchased}}</td>
-          <td>{{item.u_dateOf_Purchased |date:'dd/MM/yyyy'}}</td>
+          <td>{{item.u_dateOf_Purchased|date:'dd/mm/yyyy'}}</td>
           <td>{{item.u_password}}</td>
           <td style="display: flex">
               <button type="button" class="btn btn-warning btn-sm" [routerLink]="['edit',item.u_id]">Edit</button>
