--- a/MyApp/src/app/component/CUSTOMERS/customer-edit/customer-edit.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/customer-edit/customer-edit.component.html
@@ -9,19 +9,19 @@
                 <div class="card-header">
                     <h3> Update Customer</h3>
                 </div>
-                <div class="card-body">
-                    <form class="form" [formGroup]="formGroup" (ngSubmit)="onSubmit(fb)">
+                <div  class="card-body">
+                    <form class="form" [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup.value)">
                         <!-- <div *ngIf="data"> -->
                             <div class="form-group">
                                 <label for="u_name">Name<p class="p12">*</p></label>
-                                <input type="text" class="form-control"  [(ngModel)]="data.u_name"formControlName="name"
+                                <input type="text" class="form-control" formControlName="u_name" name="u_name"                     
                                     placeholder="Enter Your Name"
-                                    [ngClass]="{ 'is-invalid': submitted && f.name.errors?.invalid }">
+                                    [ngClass]="{ 'is-invalid': submitted && f.u_name.errors?.invalid }"/>
                             </div>
                             <div class="validation-errors">
-                                <ng-container *ngFor="let validation of validation_messages.name">
+                                <ng-container *ngFor="let validation of validation_messages.u_name">
                                     <div class="error-message text-danger"
-                                        *ngIf="formGroup.get('name').hasError(validation.type) && (formGroup.get('name').dirty || formGroup.get('name').touched)">
+                                        *ngIf="formGroup.get('u_name').hasError(validation.type) && (formGroup.get('u_name').dirty || formGroup.get('u_name').touched)">
                                         <span name="information-circle-outline"></span> {{ validation.message }}
                                     </div>
                                 </ng-container>
@@ -29,8 +29,8 @@
 
                             <div class="form-group">
                                 <label for="u_mobile">Mobile Number<p class="p12">*</p></label>
-                                <input type="text" class="form-control" formControlName="Mobilenumber"  [(ngModel)]="data.u_mobile"
-                                    placeholder="Enter Your Mobile Number"
+                                <input type="text" class="form-control" formControlName="Mobilenumber"    
+                                placeholder="Enter Your Mobile Number"
                                     [ngClass]="{ 'is-invalid': submitted && f.Mobilenumber.errors?.invalid }">
                             </div>
                             <div class="validation-errors">
@@ -44,7 +44,7 @@
 
                             <div class="form-group">
                                 <label for="u_altermobile">Alternate Mobile Number</label>
-                                <input type="text" class="form-control" formControlName="Alternatemobile"  [(ngModel)]="data.u_altermobile"
+                                <input type="text" class="form-control" formControlName="Alternatemobile" 
                                     placeholder="Enter Your Alternate Mobile Number"
                                     [ngClass]="{ 'is-invalid': submitted && f.Alternatemobile.errors?.invalid }">
                             </div>
@@ -59,7 +59,7 @@
 
                             <div class="form-group">
                                 <label for="u_email">Email<p class="p12">*</p></label>
-                                <input type="email" class="form-control" formControlName="email"  [(ngModel)]="data.u_email"
+                                <input type="email" class="form-control" formControlName="email" 
                                     placeholder="Enter Your Email">
                             </div>
                             <!-- <div class="validation-errors">
@@ -74,7 +74,7 @@
 
                             <div class="form-group">
                                 <label for="u_address">Address<p class="p12">*</p></label>
-                                <textarea class="form-control" formControlName="Address"   [(ngModel)]="data.u_address"
+                                <textarea class="form-control" formControlName="Address"   
                                     placeholder="Enter Your Address"
                                     [ngClass]="{ 'is-invalid': submitted && f.Address.errors?.invalid }"></textarea>
                             </div>
@@ -89,8 +89,8 @@
 
                             <div class="form-group">
                                 <label for="u_MachinePurchased">Machine Purchased<p class="p12">*</p></label>
-                                <select class="form-control" formControlName="Machine_purchase"  [(ngModel)]="data.u_MachinePurchased"
-                                    placeholder="Choose Your Machine">
+                                <select class="form-control" formControlName="Machine_purchase"  
+                                   >
                                     <option value="">Choose your Machine</option>
                                     <option *ngFor="let machine of Machinelist;let i=index" value="{{machine.name}}"
                                         [selected]="i == 0">{{machine.name}} </option>
@@ -108,9 +108,9 @@
 
                             <div class="form-group">
                                 <label for="u_dateOf_Purchased">Date Of Purchased<p class="p12">*</p></label>
-                                <input type="text" class="form-control" formControlName="Datepurchased"  [(ngModel)]="data.u_dateOf_Purchased"
+                                <input type="text" class="form-control" formControlName="Datepurchased" 
                                     placeholder="MM/DD/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }"
-                                    [maxDate]="maxDate"
+                                    [maxDate]="maxDate |date:'DD-MM-YYYY'"
                                     [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors?.invalid }">
 
                             </div>
@@ -126,7 +126,7 @@
                             <div class="form-group">
                                 <label for="u_password">Password<p class="p12">*</p></label>
                                 <div class="input-group">
-                                    <input [type]="passwordfieldTextType ? 'text':'password'" class="form-control"  [(ngModel)]="data.u_password"
+                                    <input [type]="passwordfieldTextType ? 'text':'password'" class="form-control"  
                                         formControlName="password" placeholder="Enter Your password"
                                         [ngClass]="{ 'is-invalid': submitted && f.password.errors?.invalid }">
                                     <div class="input-group-prepend">
@@ -152,7 +152,7 @@
                             <div class="form-group has-success has-feedback">
                                 <label  for="u_cpassword">Confirm Password<p class="p12">*</p></label>
                                 <div class="input-group">
-                                    <input [type]="confirmfieldTextType ? 'text':'password'" class="form-control"  [(ngModel)]="data.u_cpassword"
+                                    <input [type]="confirmfieldTextType ? 'text':'password'" class="form-control" 
                                         formControlName="confirmPassword" placeholder="ConfirmPassword"
                                         [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors ?.invalid }">
                                     <div class="input-group-prepend">
