--- a/MyApp/src/app/component/customer-reg/customer-reg.component.html
+++ b/MyApp/src/app/component/customer-reg/customer-reg.component.html
@@ -108,7 +108,7 @@
                         <div class="form-group">
                             <label>Date Of Purchased<p class="p12">*</p></label>
                             <input type="text" class="form-control" formControlName="Datepurchased"
-                                placeholder="MM/DD/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }"
+                                placeholder="DD/MM/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }"
                                 [maxDate]="maxDate" [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors?.invalid }">
                             
                         </div>
