--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,4 +1,3 @@
-
 <ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
     <p class="loading">Loading Awesomeness...</p>
 </ngx-spinner>
@@ -39,7 +38,7 @@
                             Complaints</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
                             <a class="dropdown-item">View Complaints</a>
-                            <a class="dropdown-item" routerLink="app-assign-complaint" routerLinkActive="active"  [routerLinkActiveOptions]="{ exact: true }" (click)="AssignComplaint()">Assign Complaints</a>
+                            <a class="dropdown-item">Assign Complaints</a>
                         </div>
                     </li>
 
