--- a/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
@@ -37,7 +37,7 @@
         <td>{{item.u_password}}</td>
         <td style="display: flex">
           <button type="button" class="btn btn-warning btn-sm" [routerLink]="['edit',item.u_id]">Edit</button>
-          <button type="button" class="btn btn-danger btn-sm ml-1" data-toggle="modal" data-target="#delete" >Delete</button>
+          <button type="button" class="btn btn-danger btn-sm ml-1" (click)="myModal.show()">Delete</button>
         </td>
       </tr>
     </tbody>
@@ -48,27 +48,8 @@
     <button type="button" class="close" data-dismiss="alert">&times;</button>
 </div>
   -->
-  <div id="delete" class="modal fade">
-    <div class="modal-dialog modal-confirm">
-      <div class="modal-content">
-        <div class="modal-header">
-          <div class="icon-box">
-            <i class="material-icons">&#xE5CD;</i>
-          </div>
-          <h4 class="modal-title">Are you sure?</h4>	
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        </div>
-        <div class="modal-body">
-         
-          <p>Do you really want to delete these records? This process cannot be undone.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-info" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-danger" name="delete" onclick="delete(item)">Delete</button>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
+
+<app-confirm-dialogmodal #myModal></app-confirm-dialogmodal>
 
 <router-outlet></router-outlet>
