--- a/MyApp/src/app/component/customer-reg/customer-reg.component.html
+++ b/MyApp/src/app/component/customer-reg/customer-reg.component.html
@@ -1,4 +1,3 @@
-
 <ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
     <p class="loading">Loading Awesomeness...</p>
 </ngx-spinner>
@@ -75,8 +74,7 @@
 
                         <div class="form-group">
                             <label>Address<p class="p12">*</p></label>
-                            <textarea class="form-control" formControlName="Address"
-                                placeholder="Enter Your Address"
+                            <textarea class="form-control" formControlName="Address" placeholder="Enter Your Address"
                                 [ngClass]="{ 'is-invalid': submitted && f.Address.errors?.invalid }"></textarea>
                         </div>
                         <div class="validation-errors">
@@ -90,9 +88,11 @@
 
                         <div class="form-group">
                             <label>Machine Purchased<p class="p12">*</p></label>
-                            <select  class="form-control" formControlName="Machine_purchase" placeholder="Choose Your Machine">
+                            <select class="form-control" formControlName="Machine_purchase"
+                                placeholder="Choose Your Machine">
                                 <option value="">Choose your Machine</option>
-                                <option *ngFor="let machine of Machinelist;let i=index" value="{{machine.name}}" [selected]="i == 0">{{machine.name}} </option>
+                                <option *ngFor="let machine of Machinelist;let i=index" value="{{machine.name}}"
+                                    [selected]="i == 0">{{machine.name}} </option>
                             </select>
 
                             <div class="validation-errors">
@@ -104,13 +104,99 @@
                                 </ng-container>
                             </div>
                         </div>
-
+                        <div id="radiocontrol">
+                            <label id="machine">Purchase Type<p class="p12">*</p></label><br>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input id="new" type="radio" class="custom-control-input " name="machieCondition"
+                                    value="newMachine" fromControlName="machieCondition" />
+                                <label id="newmachine" class="custom-control-label" for="new">New</label>
+                            </div>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input id="recondition" type="radio" class="custom-control-input "
+                                    name="machieCondition" value="reconditionMachine"
+                                    fromControlName="machieCondition" />
+                                <label id="reconditionmachine" class="custom-control-label"
+                                    for="recondition">Recondition</label>
+                            </div>
+                            <div class="invalid-feedback" *ngIf="submitted && customerForm.errors?.required">
+                                <p>Please select either value</p>
+                            </div>
+                        </div><br>
+                        <!-- <div class="validation-errors">
+                            <ng-container *ngFor="let validation of validation_messages.machieCondition">
+                                <div class="error-message text-danger"
+                                *ngIf="submitted && custfor.errors?.required">
+                                    <span> {{ validation.message }}</span> 
+                                </div>
+                            </ng-container>
+                        </div><br> -->
+                        <div class="form-group">
+                            <label>Note<p class="p12">*</p></label>
+                            <textarea class="form-control" formControlName="Note" placeholder="Enter Your Note Here"
+                                [ngClass]="{ 'is-invalid': submitted && f.Note.errors?.invalid }"></textarea>
+                        </div>
+                        <div class="validation-errors">
+                            <ng-container *ngFor="let validation of validation_messages.Note">
+                                <div class="error-message text-danger"
+                                    *ngIf="formGroup.get('Note').hasError(validation.type) && (formGroup.get('Note').dirty || formGroup.get('Note').touched)">
+                                    <span name="information-circle-outline"></span> {{ validation.message }}
+                                </div>
+                            </ng-container>
+                        </div>
+                        <div class="form-group">
+                            <label>Machine No<p class="p12">*</p></label>
+                            <input type="text" class="form-control" formControlName="Machineno"
+                                placeholder="Enter Your Machine No"
+                                [ngClass]="{ 'is-invalid': submitted && f.Machineno.errors?.invalid }">
+                        </div>
+                        <div class="validation-errors">
+                            <ng-container *ngFor="let validation of validation_messages.Machineno">
+                                <div class="error-message text-danger"
+                                    *ngIf="formGroup.get('Machineno').hasError(validation.type) && (formGroup.get('Machineno').dirty || formGroup.get('Machineno').touched)">
+                                    <span name="information-circle-outline"></span> {{ validation.message }}
+                                </div>
+                            </ng-container>
+                        </div>
+                        <div class="form-group">
+                            <label>Service Period<p class="p12">*</p></label>
+                            <select class="form-control" formControlName="servicePeriod" placeholder="How many month ?">
+                                <option value="">Choose month</option>
+                                <option *ngFor="let service of servicePeriod;let i=index" value="{{service.month}}"
+                                    [selected]="i == 0">{{service.month}} </option>
+                            </select>
+                            <div class="validation-errors">
+                                <ng-container *ngFor="let validation of validation_messages.servicePeriod">
+                                    <div class="error-message text-danger"
+                                        *ngIf="formGroup.get('servicePeriod').hasError(validation.type) && (formGroup.get('servicePeriod').dirty || formGroup.get('servicePeriod').touched)">
+                                        <span name="information-circle-outline"></span> {{ validation.message }}
+                                    </div>
+                                </ng-container>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>Warrenty Period<p class="p12">*</p></label>
+                            <select class="form-control" formControlName="warrentPeriod" placeholder="How many month ?">
+                                <option value="">Choose month</option>
+                                <option *ngFor="let Warrenty of warrentyperiod;let i=index"
+                                    value="{{Warrenty.totalmonth}}" [selected]="i == 0">{{Warrenty.totalmonth}}
+                                </option>
+                            </select>
+                            <div class="validation-errors">
+                                <ng-container *ngFor="let validation of validation_messages.warrentPeriod">
+                                    <div class="error-message text-danger"
+                                        *ngIf="formGroup.get('warrentPeriod').hasError(validation.type) && (formGroup.get('warrentPeriod').dirty || formGroup.get('warrentPeriod').touched)">
+                                        <span name="information-circle-outline"></span> {{ validation.message }}
+                                    </div>
+                                </ng-container>
+                            </div>
+                        </div>
                         <div class="form-group">
                             <label>Date Of Purchased<p class="p12">*</p></label>
                             <input type="text" class="form-control" formControlName="Datepurchased"
                                 placeholder="DD/MM/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }"
-                                [maxDate]="maxDate" [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors?.invalid }">
-                            
+                                [maxDate]="maxDate"
+                                [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors?.invalid }">
+
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.Datepurchased">
@@ -163,7 +249,8 @@
                             </div>
                         </div>
                         <div class="validation-errors">
-                            <div *ngIf="!alert"  class="alert alert-warning"><strong>Warning! </strong>Passwords must match</div>
+                            <div *ngIf="!alert" class="alert alert-warning"><strong>Warning! </strong>Passwords must
+                                match</div>
                             <ng-container *ngFor="let validation of validation_messages.confirmPassword">
                                 <div class="error-message text-danger"
                                     *ngIf="formGroup.get('confirmPassword').hasError(validation.type) && (formGroup.get('confirmPassword').dirty || formGroup.get('confirmPassword').touched)">
@@ -171,30 +258,33 @@
                                 </div>
                             </ng-container>
                         </div>
-                        <div  id="customerModal" class="modal fade" role="dialog">
+                        <div id="customerModal" class="modal fade" role="dialog">
                             <div class="modal-dialog">
-                          
-                              <!-- Modal content-->
-                              <div class="modal-content">
-                                <div class="modal-header">
-                                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                  </div>
-                                <div class="modal-body">
-                                    <div class="alert alert-success fade show" *ngIf="showSuccessMsg">
-                                    <strong>Success!</strong>Registration Successfully.
+
+                                <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     </div>
-                                    <div class="alert alert-danger fade show" *ngIf="showInvalidMsg">
-                                     <strong>Error!</strong>The email address or phone number you have entered is already registered!       
+                                    <div class="modal-body">
+                                        <div class="alert alert-success fade show" *ngIf="showSuccessMsg">
+                                            <strong>Success!</strong>Registration Successfully.
+                                        </div>
+                                        <div class="alert alert-danger fade show" *ngIf="showInvalidMsg">
+                                            <strong>Error!</strong>The email address or phone number you have
+                                            entered is
+                                            already registered!
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
                                     </div>
                                 </div>
-                                <div class="modal-footer">
-                                  <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
-                                </div>
-                              </div>                        
                             </div>
-                          </div>                    
+                        </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary" id="RegisterButton" data-toggle="modal" data-target="#customerModal"[disabled]="!formGroup.valid">
+                            <button type="submit" class="btn btn-primary" id="RegisterButton" data-toggle="modal"
+                                data-target="#customerModal" [disabled]="!formGroup.Valid">
                                 Register
                             </button>
                             <button type="reset" class="btn btn-secondary" id="ResetForm">
