--- a/src/app/component/chart/chart.component.html
+++ b/src/app/component/chart/chart.component.html
@@ -1,13 +1,18 @@
-
-
-<div class="chart-container"  style="float: left; height:30vh; width:50vw;margin-top: 100px !important;">    
-   <canvas id="canvas"></canvas>    
- </div>
-
-
- <div *ngFor='let user of users' style="text-align: center;">
-  <h2>
-         {{user.u_joinDate}}    </h2>
+<div id="barchart2">
+    <canvas id="piechart" width="50" height="50"></canvas>
+    <p id="p1"><b>Pie Chart Demo 1</b></p>
+</div>
+<div id="barchart2">
+    <canvas id="piechart2" width="50" height="50"></canvas>
+    <p id="p1"><b>BarChart Demo 2</b></p>
 </div>
 
+<div id="piechart12">
+    <canvas id="piechart3" width="50" height="50"></canvas>
+    <p id="p1"><b>Pie Chart Demo 3</b></p>
+</div>
 
+<div id="piechart12">
+    <canvas id="piechart4" width="50" height="50"></canvas>
+    <p id="p1"><b>Pie Chart Demo 4</b></p>
+</div>
