--- a/src/app/component/customer/customer-dasboard/customer-dasboard.component.html
+++ b/src/app/component/customer/customer-dasboard/customer-dasboard.component.html
@@ -1,5 +1,1 @@
-<app-header></app-header>
-<div class="router-container">
-    <router-outlet></router-outlet>
-</div>
-<app-footer></app-footer>
+<p>customer-dasboard works!</p>
