--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
-<!-- <router-outlet></router-outlet>
 
 
-<app-status-check
+<router-outlet></router-outlet>
+<!-- <app-status-check
 [onlineStatusMessage]="connectionStatusMessage"
 [onlineStatus]="connectionStatus">
-</app-status-check> 
-<app-popup-modal></app-popup-modal>-->
-<app-cust-raise-complaint></app-cust-raise-complaint> 
- 
+</app-status-check> -->
