--- a/src/app/component/service-engineer/service-engineer.component.html
+++ b/src/app/component/service-engineer/service-engineer.component.html
@@ -8,7 +8,7 @@
         <div class="col-md-8 mx-auto">
             <div class="card">
                 <div class="card-header">
-                    <h3> Registration </h3>
+                    <h3>Service Engineer Registration </h3>
                 </div>
                 <div class="card-body">
                     <form class="form" [formGroup]="formGroup" (ngSubmit)="onSubmit(fb)">
@@ -16,7 +16,7 @@
                         <div class="form-group">
                             <label>Name<p class="p12">*</p></label>
                             <input type="text" class="form-control" formControlName="name" placeholder="Enter Your Name"
-                                [ngClass]="{ 'is-invalid': submitted && f.name.errors?.invalid }">
+                                [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.name">
@@ -31,7 +31,7 @@
                             <label>Mobile Number<p class="p12">*</p></label>
                             <input type="text" class="form-control" formControlName="Mobilenumber"
                                 placeholder="Enter Mobile Number"
-                                [ngClass]="{ 'is-invalid': submitted && f.Mobilenumber.errors?.invalid }">
+                                [ngClass]="{ 'is-invalid': submitted && f.Mobilenumber.errors }">
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.Mobilenumber">
@@ -46,7 +46,7 @@
                             <label>Alternate Mobile Number</label>
                             <input type="text" class="form-control" formControlName="Alternatemobile"
                                 placeholder="Enter Alternate Mobile Number"
-                                [ngClass]="{ 'is-invalid': submitted && f.Alternatemobile.errors?.invalid }">
+                                [ngClass]="{ 'is-invalid': submitted && f.Alternatemobile.errors }">
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.Alternatemobile">
@@ -61,7 +61,7 @@
                             <label>Email<p class="p12">*</p></label>
                             <input type="email" class="form-control" formControlName="email"
                                 placeholder="Enter Your Email"
-                                [ngClass]="{ 'is-invalid': submitted && f.email.errors?.invalid }">
+                                [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.email">
@@ -75,9 +75,9 @@
 
                         <div class="form-group">
                             <label>Address<p class="p12">*</p></label>
-                            <textarea class="form-control" formControlName="Address"
-                                placeholder="Enter Address"
-                                [ngClass]="{ 'is-invalid': submitted && f.Address.errors?.invalid }"></textarea>
+                            <input type="text" class="form-control" formControlName="Address"
+                                placeholder="Enter Alternate Mobile Number"
+                                [ngClass]="{ 'is-invalid': submitted && f.Address.errors }">
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.Address">
@@ -91,15 +91,15 @@
                         <div class="form-group">
                             <label>Engineer Type<p class="p12">*</p></label>
                             <!-- <input  class="custom-select" (change)="changeCity($event)" formControlName="Machine_purchase" placeholder="select Machine"> -->
-                            <select class="form-control"  formControlName="EngineerType"  placeholder=" Choose Engineer">
+                            <select class="custom-select" (change)="changeEngineer($event)" formControlName="Engineer1">
                                 <option value="">Choose engg type</option>
-                                <option *ngFor="let engg of enggList; let i= index" value="{{engg.name}}" [selected]="i == 0">{{engg.name}}</option>
+                                <option *ngFor="let engg of Engg" [ngValue]="Engg">{{engg}}</option>
                             </select>
 
                             <div class="validation-errors">
-                                <ng-container *ngFor="let validation of validation_messages.EngineerType">
+                                <ng-container *ngFor="let validation of validation_messages.Engineer1">
                                     <div class="error-message text-danger"
-                                        *ngIf="formGroup.get('EngineerType').hasError(validation.type) && (formGroup.get('EngineerType').dirty || formGroup.get('EngineerType').touched)">
+                                        *ngIf="formGroup.get('Engineer1').hasError(validation.type) && (formGroup.get('Engineer1').dirty || formGroup.get('Engineer1').touched)">
                                         <span name="information-circle-outline"></span> {{ validation.message }}
                                     </div>
                                 </ng-container>
@@ -108,15 +108,15 @@
 
                         <div class="form-group">
                             <label>Date Of Joining<p class="p12">*</p></label>
-                            <input type="text" class="form-control" formControlName="DateOfjoining"
+                            <input type="text" class="form-control" formControlName="Datepurchased"
                                 placeholder="MM/DD/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }"
-                                [maxDate]="maxDate" [ngClass]="{ 'is-invalid': submitted && f.DateOfjoining.errors?.invalid }">
+                                [maxDate]="maxDate" [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors }">
                             <!-- <i class="fa fa-calendar"></i> -->
                         </div>
                         <div class="validation-errors">
-                            <ng-container *ngFor="let validation of validation_messages.DateOfjoining">
+                            <ng-container *ngFor="let validation of validation_messages.Datepurchased">
                                 <div class="error-message text-danger"
-                                    *ngIf="formGroup.get('DateOfjoining').hasError(validation.type) && (formGroup.get('DateOfjoining').dirty || formGroup.get('DateOfjoining').touched)">
+                                    *ngIf="formGroup.get('Datepurchased').hasError(validation.type) && (formGroup.get('Datepurchased').dirty || formGroup.get('Datepurchased').touched)">
                                     <span name="information-circle-outline"></span> {{ validation.message }}
                                 </div>
                             </ng-container>
@@ -127,7 +127,7 @@
                             <div class="input-group">
                                 <input [type]="passwordTextField ? 'text' : 'password'" class="form-control"
                                     formControlName="password" placeholder="Enter Your password"
-                                    [ngClass]="{ 'is-invalid': submitted && f.password.errors?.invalid }" />
+                                    [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">
                                         <i class="fa"
@@ -150,7 +150,7 @@
                             <div class="input-group">
                                 <input [type]="confirmTextField ? 'text':'password'" class="form-control"
                                     formControlName="confirmPassword" placeholder="ConfirmPassword"
-                                    [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors ?.invalid }" />
+                                    [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
 
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">
@@ -170,38 +170,18 @@
                                     <span name="information-circle-outline"></span> {{ validation.message }}
                                 </div>
                             </ng-container>
+
                         </div>
 
-                        <div  id="serviceEnggModal" class="modal fade" role="dialog">
-                            <div class="modal-dialog">
-                          
-                              <!-- Modal content-->
-                              <div class="modal-content">
-                                <div class="modal-header">
-                                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                  </div>
-                                <div class="modal-body">
-                                    <div class="alert alert-success fade show" *ngIf="showSuccessMsg" >
-                                        <strong>Success!</strong>Registration Successfully!
-                                    </div>
-                                    <div class="alert alert-danger fade show" *ngIf="showInvalidMsg">
-                                        <strong>Error! </strong>The email address or phone number you have entered is already registered!.
-                                    </div>                                                                        
-                                </div>
-                                <div class="modal-footer">
-                                  <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
-                                </div>
-                              </div>                        
-                            </div>
-                          </div>                    
-
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary" id="Registerbutton" data-toggle="modal" data-target="#serviceEnggModal" [disabled]="!formGroup.valid">
+                            <button type="submit" class="btn btn-primary" [disabled]="!formGroup.valid">
                                 Register
                             </button>
-                            <button type="reset" class="btn btn-secondary" id="ResetButton">
+                            <button type="reset" class="btn btn-secondary " style="float:right;margin-top: 5px;">
                                 Reset Form
                             </button>
+
+
                         </div>
                     </form>
                 </div>
