--- a/MyApp/src/app/component/customer/customer-dasboard/customer-dasboard.component.html
+++ b/MyApp/src/app/component/customer/customer-dasboard/customer-dasboard.component.html
@@ -1,1 +1,5 @@
-<p>customer-dasboard works!</p>
+<app-header></app-header>
+<div class="router-container">
+    <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
