--- a/MyApp/src/app/component/assign-complaint/assign-complaint.component.html
+++ b/MyApp/src/app/component/assign-complaint/assign-complaint.component.html
@@ -101,7 +101,7 @@
                               
                                </div>
                              
-                               <button type="button" class="btn btn-primary btn-lg btn-block" style="margin-top: 12px;padding-top: 2px !important;padding-bottom: 2px !important;" data-dismiss="modal">ASSIGN TO ENGINEER</button>
+                               <button type="button" class="btn btn-primary btn-lg btn-block" style="margin-top: 12px;padding-top: 2px !important;padding-bottom: 2px !important;"  (click)="assignengg(item)">ASSIGN TO ENGINEER</button>
                     
                             </div>
                         
