--- a/MyApp/src/app/component/CUSTOMERS/cust-raise-complaint/cust-raise-complaint.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/cust-raise-complaint/cust-raise-complaint.component.html
@@ -34,7 +34,7 @@
                             <!-- <input  class="custom-select" (change)="changeCity($event)" formControlName="Machine_purchase" placeholder="select Machine"> -->
                             <select class="form-control"  formControlName="EngineerType"  placeholder=" Choose Engineer">
                                 <option value="">Choose engg type</option>
-                                <option *ngFor="let engg of enggList; let i= index" value="{{engg.name}}" [selected]="i == 0">{{engg.name}}</option>
+                                <option *ngFor="let engg of enggList; let i= index" value="{{engg.key}}" [selected]="i == 0">{{engg.name}}</option>
                             </select>
 
                             <div class="validation-errors">
