--- a/MyApp/src/app/component/assign-complaint/assign-complaint.component.html
+++ b/MyApp/src/app/component/assign-complaint/assign-complaint.component.html
@@ -116,7 +116,7 @@
                 </div>
               </div>
             
-                     <button class='btn btn-primary' data-toggle="modal" data-target="#customerModal ">Assign</button>
+                     <button class='btn btn-primary' data-toggle="modal" data-target="#customerModal " click="asign(item)">Assign</button>
                  </td>
 
                </tr>     
