--- a/MyApp/src/app/app.component.html
+++ b/MyApp/src/app/app.component.html
@@ -6,3 +6,5 @@
 [onlineStatusMessage]="connectionStatusMessage"
 [onlineStatus]="connectionStatus">
 </app-status-check> -->
+
+<!-- <app-confirm-dialogmodal></app-confirm-dialogmodal> -->
