--- a/MyApp/src/app/component/CONFIRM-DIALOG/confirm-dialogmodal/confirm-dialogmodal.component.html
+++ b/MyApp/src/app/component/CONFIRM-DIALOG/confirm-dialogmodal/confirm-dialogmodal.component.html
@@ -1,5 +1,5 @@
 
-<div  id="myModal"  #myModal  class="modal fade">
+<div  id="myModal"  class="modal fade" role="dialog">
     <div class="modal-dialog modal-confirm">
       <div class="modal-content">
         <div class="modal-header">
@@ -15,8 +15,9 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-info" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-danger" name="delete" (click)="delete(item)">Delete</button>
+          <button type="button" class="btn btn-danger" name="delete" (click)="onConfirm()">Delete</button>
         </div>
       </div>
     </div>
   </div>
+  <!-- <button type="button" class="btn btn-danger btn-sm ml-1" data-toggle="modal" data-target="#myModal">Delete</button> -->
