--- a/MyApp/src/app/component/SERVICE-ENGG/service-engg-edit/service-engg-edit.component.html
+++ b/MyApp/src/app/component/SERVICE-ENGG/service-engg-edit/service-engg-edit.component.html
@@ -62,20 +62,9 @@
                             <input type="email" class="form-control" formControlName="email"
                                 placeholder="Enter Your Email">
                         </div>
-                        <!-- <div class="validation-errors">
-                            <ng-container *ngFor="let validation of validation_messages.email">
-                                <div class="error-message text-danger"
-                                    *ngIf="formGroup.get('email').hasError(validation.type) && (formGroup.get('email').dirty || formGroup.get('email').touched)">
-                                    <span name="information-circle-outline"></span> {{ validation.message }}
-                                </div>
-                            </ng-container>
-                        </div> -->
-
-
                         <div class="form-group">
                             <label>Address<p class="p12">*</p></label>
-                            <textarea class="form-control" formControlName="Address"
-                                placeholder="Enter Address"
+                            <textarea class="form-control" formControlName="Address" placeholder="Enter Address"
                                 [ngClass]="{ 'is-invalid': submitted && f.Address.errors?.invalid }"></textarea>
                         </div>
                         <div class="validation-errors">
@@ -89,10 +78,10 @@
 
                         <div class="form-group">
                             <label>Engineer Type<p class="p12">*</p></label>
-                            <!-- <input  class="custom-select" (change)="changeCity($event)" formControlName="Machine_purchase" placeholder="select Machine"> -->
-                            <select class="form-control"  formControlName="EngineerType"  placeholder=" Choose Engineer">
+                            <select class="form-control" formControlName="EngineerType" placeholder=" Choose Engineer">
                                 <option value="">Choose engg type</option>
-                                <option *ngFor="let engg of enggList; let i= index" value="{{engg.name}}" [selected]="i == 0">{{engg.name}}</option>
+                                <option *ngFor="let engg of enggList; let i= index" value="{{engg.name}}"
+                                    [selected]="i == 0">{{engg.name}}</option>
                             </select>
 
                             <div class="validation-errors">
@@ -104,12 +93,12 @@
                                 </ng-container>
                             </div>
                         </div>
-
                         <div class="form-group">
                             <label>Date Of Joining<p class="p12">*</p></label>
                             <input type="text" class="form-control" formControlName="DateOfjoining"
-                                placeholder="MM/DD/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }"
-                                [maxDate]="maxDate" [ngClass]="{ 'is-invalid': submitted && f.DateOfjoining.errors?.invalid }">
+                            placeholder="DD/MM/YYYY" bsDatepicker #d="bsDatepicker" [bsConfig]="dpconfig"
+                                [maxDate]="maxDate"
+                                [ngClass]="{ 'is-invalid': submitted && f.DateOfjoining.errors?.invalid }">
                             <!-- <i class="fa fa-calendar"></i> -->
                         </div>
                         <div class="validation-errors">
@@ -170,36 +159,14 @@
                                 </div>
                             </ng-container>
                         </div>
-
-                        <div  id="serviceEnggModal" class="modal fade" role="dialog">
-                            <div class="modal-dialog">
-                          
-                              <!-- Modal content-->
-                              <div class="modal-content">
-                                <div class="modal-header">
-                                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                  </div>
-                                <div class="modal-body">
-                                    <div class="alert alert-success fade show" *ngIf="showSuccessMsg" >
-                                        <strong>Success!</strong>Registration Successfully!
-                                    </div>
-                                    <div class="alert alert-danger fade show" *ngIf="showInvalidMsg">
-                                        <strong>Error! </strong>The email address or phone number you have entered is already registered!.
-                                    </div>                                                                        
-                                </div>
-                                <div class="modal-footer">
-                                  <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
-                                </div>
-                              </div>                        
-                            </div>
-                          </div>                    
-
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary" id="Registerbutton" data-toggle="modal" data-target="#serviceEnggModal" [disabled]="!formGroup.valid">
-                               Update
+                            <button type="submit" class="btn btn-primary" id="Registerbutton"
+                                [disabled]="!formGroup.valid">
+                                Update
                             </button>
-                            <button type="reset" class="btn btn-warning" id="ResetButton" routerLink="/home1/updateserviceEngineer"> 
-                             Cancle
+                            <button type="reset" class="btn btn-warning" id="ResetButton"
+                                routerLink="/home1/updateserviceEngineer">
+                                Cancle
                             </button>
                         </div>
                     </form>
