--- a/MyApp/src/app/component/customer-reg/customer-reg.component.html
+++ b/MyApp/src/app/component/customer-reg/customer-reg.component.html
@@ -104,32 +104,32 @@
                                 </ng-container>
                             </div>
                         </div>
-                        <div id="radiocontrol">
-                            <label id="machine">Purchase Type<p class="p12">*</p></label><br>
-                            <div class="custom-control custom-radio custom-control-inline">
-                                <input id="new" type="radio" class="custom-control-input " name="machieCondition"
-                                    value="newMachine" fromControlName="machieCondition" />
-                                <label id="newmachine" class="custom-control-label" for="new">New</label>
+                        <div class="form-group" id="radiocontrol">
+                            <label id="machine">Purchase Type<p class="p12">*</p></label><br><br>
+                            <div class="form-control">
+                                <div class="custom-control custom-radio custom-control-inline">
+                                    <input id="new" type="radio" class="custom-control-input " name="machieCondition"
+                                        value="newMachine" fromControlName="machieCondition" />
+                                    <label id="newmachine" class="custom-control-label" for="new">New</label>
+                                </div>
+                                <div class="custom-control custom-radio custom-control-inline">
+                                    <input id="recondition" type="radio" class="custom-control-input "
+                                        name="machieCondition" value="reconditionMachine" fromControlName="machieCondition" />
+                                    <label id="reconditionmachine" class="custom-control-label"
+                                        for="recondition">Recondition</label>
+                                </div>
+                                <div [ngClass]="{ 'is-invalid': submitted && f.machieCondition.errors?.invalid }"> 
+                                </div>
                             </div>
-                            <div class="custom-control custom-radio custom-control-inline">
-                                <input id="recondition" type="radio" class="custom-control-input "
-                                    name="machieCondition" value="reconditionMachine"
-                                    fromControlName="machieCondition" />
-                                <label id="reconditionmachine" class="custom-control-label"
-                                    for="recondition">Recondition</label>
-                            </div>
-                            <div class="invalid-feedback" *ngIf="submitted && customerForm.errors?.required">
-                                <p>Please select either value</p>
-                            </div>
-                        </div><br>
-                        <!-- <div class="validation-errors">
+                        </div>
+                        <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.machieCondition">
                                 <div class="error-message text-danger"
-                                *ngIf="submitted && custfor.errors?.required">
-                                    <span> {{ validation.message }}</span> 
+                                    *ngIf="formGroup.get('machieCondition').hasError(validation.type) && (formGroup.get('machieCondition').dirty || formGroup.get('machieCondition').touched)">
+                                    <span> {{ validation.message }}</span>
                                 </div>
                             </ng-container>
-                        </div><br> -->
+                        </div>
                         <div class="form-group">
                             <label>Note<p class="p12">*</p></label>
                             <textarea class="form-control" formControlName="Note" placeholder="Enter Your Note Here"
@@ -193,10 +193,9 @@
                         <div class="form-group">
                             <label>Date Of Purchased<p class="p12">*</p></label>
                             <input type="text" class="form-control" formControlName="Datepurchased"
-                                placeholder="DD/MM/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }"
+                                placeholder="DD/MM/YYYY" bsDatepicker #d="bsDatepicker" [bsConfig]="dpconfig"
                                 [maxDate]="maxDate"
                                 [ngClass]="{ 'is-invalid': submitted && f.Datepurchased.errors?.invalid }">
-
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.Datepurchased">
@@ -258,33 +257,9 @@
                                 </div>
                             </ng-container>
                         </div>
-                        <div id="customerModal" class="modal fade" role="dialog">
-                            <div class="modal-dialog">
-
-                                <!-- Modal content-->
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <div class="alert alert-success fade show" *ngIf="showSuccessMsg">
-                                            <strong>Success!</strong>Registration Successfully.
-                                        </div>
-                                        <div class="alert alert-danger fade show" *ngIf="showInvalidMsg">
-                                            <strong>Error!</strong>The email address or phone number you have
-                                            entered is
-                                            already registered!
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary" id="RegisterButton" data-toggle="modal"
-                                data-target="#customerModal" [disabled]="!formGroup.Valid">
+                            <button type="submit" class="btn btn-primary" id="RegisterButton" 
+                                [disabled]="!formGroup.valid">
                                 Register
                             </button>
                             <button type="reset" class="btn btn-secondary" id="ResetForm">
