--- a/MyApp/src/app/app.component.html
+++ b/MyApp/src/app/app.component.html
@@ -5,6 +5,5 @@
 [onlineStatusMessage]="connectionStatusMessage"
 [onlineStatus]="connectionStatus">
 </app-status-check> 
-<app-popup-modal></app-popup-modal>
-<app-cust-raise-complaint></app-cust-raise-complaint> 
--->
+<app-popup-modal></app-popup-modal>-->
+<app-assign-complaint></app-assign-complaint>
